--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-Primer problema de optimización/datos_ceibal
-Primer problema de optimización/graphs
+datos_ceibal
+graphs
 __pycache__
 .DS_Store
+buildings
+buildings_v2
+Datos_WiFi_Ceibal
+wireless-learning-main
+papers
+Primer problema de optimización
